--- a/experience.Rmd
+++ b/experience.Rmd
@@ -6,14 +6,14 @@ output:
     toc_float: true
 ---
 
-### Education
+## Education
 
 **University of California, San Diego (UCSD), CA [Sep 2018 - Jun 2022]{style="float:right"}** \
 *Bachelor of Science in Biology with Specs in Bioinformatics*
 
 <br>
 
-### Research Experience
+## Research Experience
 
 **Zorrilla Lab, Scripps Research Institute, CA [Sep 2021 - Mar 2022]{style="float:right"}** 
 
@@ -23,7 +23,7 @@ output:
 
 <br>
 
-### Skills and Languages
+## Skills and Languages
 
 - Python
 - JavaScript
